FEAT: CREATED TABLE JOINS